Add frontend folder

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,10 +28,10 @@
   <!-- ✅ المقدمة -->
   <section class="intro" id="intro">
     <video autoplay muted loop playsinline>
-      <source src="./vedios/start.mp4" type="video/mp4" />
+      <source src="./assets/vedios/start.mp4" type="video/mp4" />
     </video>
     <div class="intro-content">
-      <img src="./images/logo.jpeg" alt="الشعار" class="logo" />
+      <img src="./assets/images/logo.jpeg" alt="الشعار" class="logo" />
       <h1>مرحباً بك في تكنو ميديا</h1>
       <p>منصة متخصصة في تقديم خدمات التصميم، البرمجة، والمونتاج بأعلى جودة واحترافية</p>
       <button id="startNow" class="btn">ابدأ الآن</button>
@@ -43,10 +43,10 @@
     <h2 class="section-title">معرض أعمالنا</h2>
     <div class="manual-slider">
       <div class="manual-track">
-        <img src="./images/card.jpeg" alt="عمل 1">
-        <img src="./images/card1.jpeg" alt="عمل 2">
+        <img src="./assets/images/card.jpeg" alt="عمل 1">
+        <img src="./assets/images/card1.jpeg" alt="عمل 2">
         <video controls controlsList="nodownload">
-          <source src="./vedios/start.mp4" type="video/mp4" />
+          <source src="./assets/vedios/start.mp4" type="video/mp4" />
         </video>
       </div>
     </div>
@@ -81,14 +81,14 @@
   
       <!-- Basic Plan -->
       <div class="package-card" data-type="once">
-        <img src="images/package1.jpg" alt="Basic Plan">
+        <img src=./assets/images/package1.jpg" alt="Basic Plan">
         <h3 class="plan-title">الباقة الأساسية</h3>
         <p class="plan-desc">مناسبة للمبتدئين</p>
         <div class="plan-price">50$</div>
         <ul class="features-list">
-          <li>✅ طلب واحد</li>
-          <li>✅ دعم فني</li>
-          <li>✅ تسليم خلال 24 ساعة</li>
+          <li> طلب واحد</li>
+          <li> دعم فني</li>
+          <li> تسليم خلال 24 ساعة</li>
         </ul>
         <button class="subscribe-btn">اشترك الآن</button>
       </div>
@@ -96,7 +96,7 @@
       <!-- Premium Plan -->
       <div class="package-card highlight" data-type="monthly">
         <div class="ribbon">خصم 40%</div>
-        <img src="images/package2.jpg" alt="Premium Plan">
+        <img src="./assets/images/package2.jpg" alt="Premium Plan">
         <h3 class="plan-title">الباقة المميزة</h3>
         <p class="plan-desc">الأكثر طلبًا</p>
         <div class="plan-price">
@@ -104,24 +104,24 @@
           <span class="new-price">60$</span>
         </div>
         <ul class="features-list">
-          <li>✅ تصميم احترافي</li>
-          <li>✅ 5 طلبات</li>
-          <li>✅ دعم مستمر</li>
-          <li>✅ استشارات مجانية</li>
+          <li> تصميم احترافي</li>
+          <li> 5 طلبات</li>
+          <li> دعم مستمر</li>
+          <li> استشارات مجانية</li>
         </ul>
         <button class="subscribe-btn">اشترك الآن</button>
       </div>
   
       <!-- Monthly Plan -->
       <div class="package-card" data-type="monthly">
-        <img src="images/package3.jpg" alt="Monthly Plan">
+        <img src="./assets/images/package3.jpg" alt="Monthly Plan">
         <h3 class="plan-title">الباقة الشهرية</h3>
         <p class="plan-desc">للاستخدام المتكرر</p>
         <div class="plan-price">90$</div>
         <ul class="features-list">
-          <li>✅ عدد غير محدود من الطلبات</li>
-          <li>✅ تقارير شهرية</li>
-          <li>✅ أولوية في الدعم</li>
+          <li> عدد غير محدود من الطلبات</li>
+          <li> تقارير شهرية</li>
+          <li> أولوية في الدعم</li>
         </ul>
         <button class="subscribe-btn">اشترك الآن</button>
       </div>
@@ -288,3 +288,7 @@
 
 </body>
 </html>
+
+
+
+
