moved html pages to pages folder and rename on of them

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -22,7 +22,7 @@
     <a href="#services">الخدمات</a>
     <a href="#stats">الإحصائيات</a>
     <a href="#faq">الأسئلة الشائعة</a>
-    <a href="/login.html">تسجيل الدخول</a>
+    <a href="/pages/loginPage.html">تسجيل الدخول</a>
   </div>
 
   <!-- ✅ المقدمة -->
