--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -23,6 +23,7 @@
     <a href="#stats">الإحصائيات</a>
     <a href="#faq">الأسئلة الشائعة</a>
     <a href="/pages/loginPage.html">تسجيل الدخول</a>
+    <a href="pages/loginPage.html">تسجيل الدخول</a>
   </div>
 
   <!-- ✅ المقدمة -->
