--- a/frontend/pages/client-dashboard-FULL-REBUILT.html
+++ b/frontend/pages/client-dashboard-FULL-REBUILT.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>لوحة العميل | تكنو ميديا</title>
-  <link rel="stylesheet" href="./css/styles-final.css" />
-  <link rel="stylesheet" href="./css/client-redesigned.css" />
-  <link rel="stylesheet" href="./css/chat-home.css" />
+  <link rel="stylesheet" href="../css/styles-final.css" />
+  <link rel="stylesheet" href="../css/client-redesigned.css" />
+  <link rel="stylesheet" href="../css/chat-home.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- AOS Library CDN -->
